# assessment-backend

./: .env.example  .gitignore  AUTHENTICATION_INTEGRATION.md  README.md  RUN.md  auth_client_example.py  docker-compose.yml  docker_compose_and_local_setup_guide_fastapi_backend.md  pyproject.toml  requirements.txt
app/: crud.py  main.py  minio_client.py  models.py  schemas.py
app/alembic/versions/: 2e006099b324_merge_multiple_heads.py  34fd6898b729_added_one_more_status_and_event_type_.py  38da6febf349_add_submissionevents_model.py  56621201a404_add_attachment_object_name_to_submission.py  5c17998686ed_fix_multiple_heads.py  8c7e75bd3a10_add_username_to_user.py  91f5f0953431_add_assessment_and_submission_tables.py  91f5f0953431_add_submission_files_table.py  a5b8c9d0e1f2_add_user_session_model.py  a9f02beb0ecf_add_human_review_table.py  aa8b819fdada_added_one_more_status_and_event_type.py  be98f78292b0_fix_multiple_heads.py  c1d34d81651c_merge_heads.py  f3e4d9f8c2a1_add_role_to_user.py
app/api/: deps.py  main.py  router.py
app/api/routes/: admin.py  appeals.py  assessment.py  assessments.py  attempts.py  files.py  health.py  human_review.py  login.py  me.py  path.py  private.py  reviews.py  submission.py  submissions.py  users.py
app/core/: config.py  db.py  minio_config.py  security.py
app/db/: session.py
app/services/: evaluation.py  progression.py  seed.py  storage.py
tests/: test_app.py
tests/api/routes/: test_submission.py
