[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assessment-backend"
version = "0.1.0"
description = "Assessment platform backend for the DIFY FDE enablement path."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.0",
  "aiosqlite>=0.22.0",
  "fastapi>=0.136.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.2.0",
  "python-multipart>=0.0.27",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
